projects/compiler/test/typechecker/binary/lte_error.1.out
Error at %FILE_NAME%:1:6
Illegal operator
  |  true <= 123
          ^
No operator '<=' exists between types Bool and Int
